<?xml version="1.0"?>
<package format="3">
  <name>ros2_mobile_control</name>
  <version>0.1.0</version>
  <description>Mobile phone-based teleoperation interface for ROS2</description>
  <maintainer email="nagendra3feb@gmail.com">Nagendra Sriram</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>flask</exec_depend>
  <exec_depend>flask_socketio</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

</package>


